<resources>
    <string name="app_name">RecordMoney</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">设置</string>
    <string name="project">项目：</string>
    <string name="save">保存</string>
    <string name="money">金额：</string>
    <string name="date">日期：</string>
    <string name="percent">占比：</string>
    <string name="query_info">以下是查询信息</string>
    <string name="remark">备注：</string>
    <string name="count">统计</string>
    <string name="about">关于</string>
    <string name="count_money">统计</string>
    <string name="state">状态：</string>
    <string name="query">查询</string>
    <string name="onekeyset">一键设置已结算</string>
    <string name="condition">在此输入查询条件</string>
    <string name="getPath">获取路径</string>
    <string name="location">所在位置</string>
    <string name="copy">复制当前数据库</string>
    <string name="cover">覆盖当前数据库</string>
    <string name="title_activity_choose_area">ChooseAreaActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="mark">~</string>
    <string name="home">Home</string>
    <string name="refresh">刷新</string>
    <string name="SearchActivity">SearchActivity</string>
    <string name="title_activity_login">TrickerApp</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_password">密码太短!</string>
    <string name="error_incorrect_password">密码错误!</string>
    <string name="error_field_required">必填项!</string>
    <string name="type">类型：</string>
    <string name="name">姓名：</string>
    <string name="getMoney">获得金额：</string>
    <string name="payMoney">支出金额：</string>
</resources>
