<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tricker.recordmoney.QueryFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Spinner
            android:id="@+id/editType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/type" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <Spinner
            android:id="@+id/spSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/symbol"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/editQuery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/condition"
            android:inputType="text"
            android:imeOptions="actionGo"
             >

        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/queryInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/query_info"
        android:textColor="#ff0000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/countMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginStart="140dp"
        android:text="@string/count"
        android:textSize="16sp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>
    <LinearLayout
        android:id="@+id/saleLayout"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/editShowMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/showMethod" />
        <Button
            android:id="@+id/btnAverageMoney"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="日均"/>
        <Button
            android:id="@+id/btnMaxMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="最多"/>
        <Button
            android:id="@+id/btnMinMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="最少"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rentLayout"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count"/>
        <Button
            android:id="@+id/btnOneKeySet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="OneKeySet"/>
    </LinearLayout>

</LinearLayout>